# spatialdata

./: .bumpversion.cfg  .codecov.yaml  .editorconfig  .flake8  .gitignore  .gitmodules  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  Dockerfile.emulators  LICENSE  README.md  asv.conf.json  benchmark_dataloader.py  pyproject.toml  pytest_before_after.csv  pytest_by_file.csv  pytest_by_test.csv  pytest_durations.csv  pytest_fixture_benchmark.csv  pytest_summary.csv  spatialdata_pr_context.md
.claude/: settings.local.json
.claude/skills/memray/: SKILL.md
.claude/skills/profimp/: SKILL.md
.claude/skills/pyspy/: SKILL.md
.github/: codecov.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build_image.yml  pre-commit.yaml  release.yaml  test.yaml  test_and_deploy.yaml
benchmarks/: README.md  benchmark_dataloader.py  benchmark_imports.py  benchmarks.py  spatialdata_benchmark.py  utils.py
docs/: Makefile  api.md  changelog.md  conf.py  contributing.md  design_doc.md  developer_docs.md  glossary.md  index.md  installation.md  references.bib  spatialdata.md  spatialdata_models.md  spatialdata_transformations.md  user_guide.md
docs/_static/css/: custom.css
docs/_templates/autosummary/: class.rst  function.rst
docs/api/: SpatialData.md  data_formats.md  dataloader.md  datasets.md  io.md  models.md  models_utils.md  operations.md  testing.md  transformations.md  transformations_utils.md
docs/extensions/: typed_returns.py
docs/notebooks/: example.ipynb
docs/tutorials/: example.ipynb  index.md
examples/dev-examples/: README.md  image_tiles.py  spatial_query_and_rasterization.py
spatialdata/: __init__.py  __main__.py  _compat.py  _logging.py  utils.py
spatialdata/_constants/: _constants.py  _enum.py  _key.py
spatialdata/_core/: __init__.py  _query_requests.py  _rasterize.py  _spatial_query.py  _spatialdata.py  _spatialdata_ops.py  _transform_elements.py  aggregate.py  coordinate_spaces.py  coordinate_system.py  core_utils.py  data_extent.py  elements.py  format.py  models.py  reader.py  spatialdata.py  spatialdatapool.py  transform.py  transformations.py  writer.py
spatialdata/_core/mixin/: io_mixin.py
spatialdata/_core/ngff/: ngff_coordinate_system.py  ngff_transformations.py
spatialdata/_dataloader/: datasets.py
spatialdata/_dl/: datasets.py
spatialdata/_io/: __init__.py  format.py  multiscale.py  read.py  write.py
spatialdata/_io/.ipynb_checkpoints/: read-checkpoint.py
spatialdata/pl/: __init__.py  basic.py
spatialdata/pp/: __init__.py  basic.py
spatialdata/temp/: Readme.md  bug_dask_zarr.py  bug_dask_zarr_report.py  load_and_view_merfish.py  napari_viewer.py
spatialdata/tl/: __init__.py  basic.py
src/spatialdata/: __init__.py  __main__.py  _accessors.py  _compat.py  _docs.py  _logging.py  _store.py  _types.py  _utils.py  config.py  datasets.py  datasets.yaml  testing.py  utils.py
src/spatialdata/_constants/: _constants.py  _enum.py
src/spatialdata/_core/: _deepcopy.py  _elements.py  _rasterize.py  _spatial_query.py  _spatialdata_ops.py  _transform_elements.py  _utils.py  centroids.py  concatenate.py  core_utils.py  data_extent.py  deconcatenate.py  models.py  spatialdata.py  spatialdata_operations.py  transformations.py  validation.py
src/spatialdata/_dataloader/: datasets.py  transforms.py
src/spatialdata/_io/: __init__.py  _dask_zarr_compat.py  _manager.py  _utils.py  accessor.py  format.py  io_points.py  io_raster.py  io_shapes.py  io_table.py  io_zarr.py  read.py  write.py
src/spatialdata/dataloader/: __init__.py  _utils.py  datasets.py  graph_loader.py
src/spatialdata/element_utils/: __init__.py  _utils.py  element_utils.py
src/spatialdata/io/: __init__.py
src/spatialdata/models/: __init__.py  _accessor.py  _utils.py  chunks_utils.py  models.py  pyramids_utils.py
src/spatialdata/transformations/: __init__.py  _utils.py  operations.py  transformations.py
tests/: conftest.py  test_basic.py  test_ecosystem.py  test_init.py  test_utils.py
tests/_core/: __init__.py  conftest.py  test_aggregations.py  test_coordinate_system.py  test_core_utils.py  test_elements_transform.py  test_equality.py  test_instantiation.py  test_io.py  test_models.py  test_ngff_coordinate_system.py  test_ngff_transformations.py  test_rasterize.py  test_spatial_query.py  test_spatialdata_operations.py  test_transform.py  test_transformations.py  test_transformations_on_elements.py
tests/_io/: test_format.py  test_readwrite.py
tests/core/: test_centroids.py  test_concatenate.py  test_data_extent.py  test_deepcopy.py  test_get_attrs.py  test_validation.py  test_write.py
tests/core/operations/: conftest.py  test_aggregations.py  test_apply.py  test_map.py  test_rasterize.py  test_rasterize_bins.py  test_spatialdata_operations.py  test_transform.py  test_vectorize.py
tests/core/query/: test_masking.py  (+4 more)
tests/data/: multipolygon.json  points.json  polygon.json
tests/dataloader/: __init__.py  conftest.py  test_datasets.py  test_graph_loader.py
tests/datasets/: test_datasets.py  test_merfish.py  test_merfish_mouse_brain.py
tests/io/: multi_table.py  test_attrs_io.py  test_format.py  test_metadata.py  test_multi_table.py  test_partial_read.py  test_pyramids_performance.py  test_readwrite.py  test_remote.py  test_remote_mock.py  test_remote_storage.py  test_store.py  test_store_abstractions.py  test_utils.py  test_versions.py
tests/models/: test_accessor.py  test_chunks_utils.py  test_models.py  test_pyramids_utils.py
tests/spatialdata/: test_equality.py  test_instantiation.py
tests/test_core/: test_spatialdata_operations.py
tests/test_dataloader/: test_datasets.py
tests/test_element_utils/: test_element_utils.py
tests/test_io/: test_format.py  test_readwrite.py  test_utils.py
tests/test_models/: test_models.py
tests/test_transformations/: test_transformations.py
tests/transformations/: test_transformations.py  test_transformations_utils.py
tests/utils/: test_config.py  test_element_utils.py  test_sanitize.py  test_testing.py
(+37 files in other folders)
