[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "spatialdata"
description = "Spatial data format."
authors = [
    {name = "scverse"},
]
maintainers = [
    {name = "scverse", email = "giov.pll@gmail.com"},
]
urls.Documentation = "https://spatialdata.readthedocs.io/"
urls.Source = "https://github.com/scverse/spatialdata.git"
urls.Home-page = "https://github.com/scverse/spatialdata.git"
version = "0.0.1.dev1"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "anndata",
    "numpy",
    "xarray",
    "zarr",
#    "ome_zarr",
    "ome_zarr@git+https://github.com/ome/ome-zarr-py.git",
    "spatial_image>=0.3.0",
    "multiscale_spatial_image>=0.11.2",
    "xarray-schema",
    "pygeos",
    "geopandas",
    "shapely>=2.0.1",
    "rich",
    "pyarrow",
    "typing_extensions>=4.0.0",
    "dask-image",
    "networkx"
]

[project.optional-dependencies]
dev = [
    "bump2version",
]
docs = [
    "sphinx>=4.5",
    "sphinx-book-theme>=1.0.0",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinx-design",
    # For notebooks
    "ipython>=8.6.0",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
]
torch = [
    "torch"
]
extra  = [
    "napari-spatialdata",
    "spatialdata-plot",
    "spatialdata-io",
]

[tool.coverage.run]
source = ["spatialdata"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
#    "-Werror",  # if 3rd party libs raise DeprecationWarnings, just use filterwarnings below
    "--import-mode=importlib",  # allow using test files with same name
    "-s"  # print output from tests
]
# info on how to use this https://stackoverflow.com/questions/57925071/how-do-i-avoid-getting-deprecationwarning-from-inside-dependencies-with-pytest
filterwarnings = [
    #     "ignore:.*U.*mode is deprecated:DeprecationWarning",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.hatch.metadata]
allow-direct-references = true
