[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]


[project]
name = "spatialdata"
description = "Spatial data format."
authors = [
    {name = "scverse"},
]
maintainers = [
    {name = "scverse", email = "giov.pll@gmail.com"},
]
urls.Documentation = "https://spatialdata.scverse.org/en/latest"
urls.Source = "https://github.com/scverse/spatialdata.git"
urls.Home-page = "https://github.com/scverse/spatialdata.git"
requires-python = ">=3.11"
dynamic= [
  "version" # allow version to be set by git tags
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "anndata>=0.9.1",
    "annsel>=0.1.2",
    "click",
    "dask-image",
    "dask>=2025.2.0,<2026.1.2",
    "distributed<2026.1.2",
    "datashader",
    "fsspec[s3,http]",
    "geopandas>=0.14",
    "multiscale_spatial_image==2.0.3",
    "networkx",
    "numba>=0.55.0",
    "numpy",
    "ome_zarr>=0.12.2",
    "pandas",
    "pooch",
    "pyarrow",
    "rich",
    "setuptools",
    "shapely>=2.0.1",
    "spatial_image>=1.2.3",
    "scikit-image",
    "scipy!=1.17.0",
    "typing_extensions>=4.8.0",
    "universal_pathlib>=0.2.6",
    "xarray>=2024.10.0",
    "xarray-spatial>=0.3.5",
    "zarr>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "bump2version",
    "sentry-prevent-cli",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "torch",
]
docs = [
    "sphinx>=4.5",
	"sphinx-autobuild",
    "sphinx-book-theme>=1.0.0",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinx-design",
    # For notebooks
    "ipython>=8.6.0",
    "sphinx-copybutton",
    "sphinx-pytest",
]
benchmark = [
    "asv",
    "memray",
]
torch = [
    "torch"
]
extra  = [
    "napari-spatialdata[all]",
    "spatialdata-plot",
    "spatialdata-io",
]

[tool.coverage.run]
source = ["spatialdata"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
#    "-Werror",  # if 3rd party libs raise DeprecationWarnings, just use filterwarnings below
    "--import-mode=importlib",  # allow using test files with same name
    "-s",  # print output from tests
]
# These are all markers coming from xarray, dask or anndata. Added here to silence warnings.
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: run test on GPU using CuPY.",
    "skip_with_pyarrow_strings: skipwhen pyarrow string conversion is turned on",
]
# info on how to use this https://stackoverflow.com/questions/57925071/how-do-i-avoid-getting-deprecationwarning-from-inside-dependencies-with-pytest
filterwarnings = [
    #     "ignore:.*U.*mode is deprecated:DeprecationWarning",
]

[tool.jupytext]
formats = "ipynb,md"

[tool.hatch.build.targets.wheel]
packages = ['src/spatialdata']

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    "build",
    "docs/_build",
    "dist",
    "setup.py",

]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix, i, j, k, l is reasonable indexing notation
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Missing docstring in magic method
    "D105",
    # Do not perform function calls in argument defaults.
    "B008",
    # Missing docstring in magic method
    "D105",
]
select = [
    "D", # flake8-docstrings
    "I", # isort
    "E", # pycodestyle
    "F", # pyflakes
    "W", # pycodestyle
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "TID",  # flake-8-tidy-imports
    "NPY",  # NumPy-specific rules
    "PT",  # flake8-pytest-style
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "BLE", # flake8-blind-except
    "T20",  # flake8-print
    "RET", # flake8-raise
    "PGH", # pygrep-hooks
]
unfixable = ["B", "C4", "UP", "BLE", "T20", "RET"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
    "tests/*" = ["D", "PT", "B024"]
    "*/__init__.py" = ["F401", "D104", "D107", "E402"]
    "docs/*" = ["D","B","E","A"]
    "src/spatialdata/transformations/transformations.py" = ["D101","D102", "D106", "B024", "T201", "RET504", "UP006", "UP007"]
    "src/spatialdata/transformations/operations.py" = ["D101","D102", "D106", "B024","D401", "T201", "RET504", "RET506", "RET505", "RET504", "UP006", "UP007"]
    "src/spatialdata/transformations/ngff/*.py" = ["D101","D102", "D106", "D401", "E501","RET506", "RET505", "RET504", "UP006", "UP007"]
    "src/spatialdata/transformations/*" = ["RET", "D", "UP006", "UP007"]
    "src/spatialdata/models/models.py" = ["D101", "B026"]
    "src/spatialdata/dataloader/datasets.py" = ["D101"]
    "tests/test_models/test_models.py" = ["NPY002"]
    "tests/conftest.py"= ["E402"]
    "benchmarks/*" = ["ALL"]


# pyupgrade typing rewrite TODO: remove at some point from per-file ignore
# "UP006", "UP007"
